# TigerCasino

./: .gitignore  COMPLETE_GAP_ANALYSIS.md  COMPLETE_GAP_ANALYSIS_2026.md  COMPREHENSIVE_GAP_ANALYSIS.md  DETAILED_GAP_ANALYSIS.md  GAPS_ANALYSIS.md  GAP_ANALYSIS.md  GAP_ANALYSIS_FINAL.md  README.md  SPEC.md
.github/workflows/: ci-cd.yml
backend/: Dockerfile  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/cache/: redis.go
backend/internal/config/: config.go
backend/internal/database/: database.go
backend/internal/discord/: bot.go
backend/internal/handlers/: crypto_handler.go  handler.go  handlers.go  vip_handler.go
backend/internal/middleware/: auth.go  middleware.go
backend/internal/models/: crypto.go  models.go  seed.go
backend/internal/observability/: metrics.go
backend/internal/queue/: rabbitmq.go
backend/internal/services/: affiliate_service.go  bridge_test.go  comprehensive_sportsbook_service.go  crypto_service.go  crypto_wallet_service.go  dex_swap_service.go  esports_extended_service.go  esports_service.go  fiat_payment_service.go  game_aggregator.go  game_engine_bridge.go  game_service.go  i18n_additional.go  i18n_advanced.go  i18n_final.go  i18n_service.go  jackpot_extended_service.go  jackpot_service.go  kyc_service.go  live_dealer_extended.go  livechat_service.go  lottery_extended_service.go  lottery_service.go  payment_gateway.go  payment_service.go  poker_extended_service.go  poker_games_service.go  poker_service.go  promotion_service.go  promotions_service.go  provider_extended_service.go  provider_integration_service.go  provider_service.go  referral_service.go  security_bridge.go  security_test.go  sports_service.go  sportsbook_advanced.go  sportsbook_service.go  table_games_extended.go  (+7 more)
backend/internal/telegram/: bot.go
backend/internal/websocket/: hub.go  sportsbook_hub.go
backend/pkg/database/: database.go
database/: schema.sql
deployments/: docker-compose.yml  nginx.conf
deployments/kubernetes/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: ClientProviders.tsx  globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/admin/: admin.module.css  page.tsx
frontend/src/app/auth/: auth.module.css
frontend/src/app/dashboard/: dashboard.module.css  page.tsx
frontend/src/app/esports/: page.tsx
frontend/src/app/games/: games.module.css  page.tsx
frontend/src/app/live-casino/: page.tsx
frontend/src/app/providers/: page.tsx
frontend/src/app/sports/: page.tsx
frontend/src/app/tournaments/: page.tsx
frontend/src/app/vip/: page.tsx  vip.module.css
frontend/src/app/wallet/: page.tsx  wallet.module.css
frontend/src/components/: AdminCrypto.tsx  CryptoDeposit.tsx  CryptoWithdrawal.tsx
frontend/src/components/games/: GameComponents.tsx
frontend/src/components/layout/: Footer.module.css  Footer.tsx  Header.module.css  Header.tsx
frontend/src/components/lottery/: LotteryGames.tsx
frontend/src/components/ui/: Badge.module.css  Badge.tsx  Button.module.css  Button.tsx  Card.module.css  Card.tsx  CrashGame.module.css  CrashGame.tsx  GameCard.module.css  (+11 more)
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/lib/: api.ts  crypto.ts
frontend/src/store/: index.ts
frontend/src/styles/: globals.css
frontend/src/types/: crypto.ts  games.ts  index.ts
game-engine/: CMakeLists.txt
game-engine/include/: AdditionalSlotsBatch2.hpp  AviatorGame.hpp  BulkSlotGenerator.hpp  CrashGame.hpp  CrashGameServer.hpp  DiceGame.hpp  ExtendedSlotGames.hpp  GameEngine.hpp  GameShows.hpp  LiveDealerGame.hpp  LiveDealerServer.hpp  LotteryBingo.hpp  MassiveSlotGenerator.hpp  MinesGame.hpp  OriginalGames.hpp  OriginalGamesExtended.hpp  PlinkoGame.hpp  ProvablyFair.hpp  RandomNumberGenerator.hpp  RocketQueenGame.hpp  Roulette.hpp  SlotGameEngine.hpp  SlotGameServer.hpp  SlotMachine.hpp  SlotsBatch3.hpp  SpacemanGame.hpp  TableGameServer.hpp  TigerGameEngine.hpp  VirtualSports.hpp  ZeppelinGame.hpp  tiger_game_engine.h
game-engine/src/: AdditionalSlotsBatch2.cpp  ArcadeGames.cpp  BulkSlotGenerator.cpp  CrashGameServer.cpp  DiceGame.cpp  ExtendedSlotGames.cpp  GameEngine.cpp  GameShows.cpp  LiveDealerServer.cpp  LotteryBingo.cpp  MassiveSlotGenerator.cpp  OriginalGamesExtended.cpp  RandomNumberGenerator.cpp  RocketQueenGame.cpp  ScratchCards.cpp  SlotGameServer.cpp  SlotMachine.cpp  SlotsBatch3.cpp  TableGameServer.cpp  TableGames.cpp  TigerGameEngine.cpp  TigerOriginals.cpp  TigerOriginals2.cpp  VirtualSports.cpp  ZeppelinGame.cpp  lib.cpp  main.cpp  tiger_game_engine.cpp
mobile/ios/: AppDelegate.swift  GameViewController.swift
security/: Cargo.toml
security/src/: config.rs  crypto_handler.rs  crypto_service.rs  database.rs  handlers.rs  lib.rs  main.rs.bak  middleware.rs  models.rs  websocket_security.rs
security/src/fraud_detection/: advanced.rs  mod.rs
security/src/games/: crash.rs  mines.rs  mod.rs  plinko.rs
security/src/nft/: mod.rs
security/src/provably_fair/: mod.rs
security/src/provider/: 1x2gaming.rs  additional_providers.rs  allbet.rs  amatic.rs  amusnet.rs  apollo.rs  arrow.rs  asiagaming.rs  authentic.rs  bbin.rs  belatra.rs  beter.rs  betgames.rs  betsoft.rs  betsolutions.rs  betsson.rs  bgaming.rs  biggaming.rs  booongo.rs  bsw.rs  caleta.rs  dragongaming.rs  dreamgaming.rs  ebet.rs  endorphina.rs  even_more.rs  evolution.rs  evolutionlive.rs  evoplay.rs  extra_slots.rs  ezugi.rs  fantasma.rs  gameart.rs  habanero.rs  hacksaw.rs  high5.rs  hollywoodtv.rs  igt.rs  inspired.rs  irondog.rs  (+43 more)
security/src/token/: mod.rs
(+25 files in other folders)
