[package]
name = "tigercasino-security"
version = "2.0.0"
edition = "2021"

[dependencies]
# Cryptography
rand = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
hex = "0.4"
hmac = "0.12"
totp-lite = "2.0"

# Web framework (Actix-web for high performance)
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"

# HTTP client for provider APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Database
tokio-postgres = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
bb8 = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"

[lib]
name = "tigercasino_security"
path = "src/lib.rs"

[[bin]]
name = "security-cli"
path = "src/main.rs"

# Security features
[features]
default = ["secure-crypto"]
secure-crypto = ["aes-gcm", "argon2"]
